manifests/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multichat-gradio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: osc-dev.elpai.org
      http:
        paths:
          - path: /multichat
            pathType: Prefix
            backend:
              service:
                name: multichat-gradio
                port:
                  number: 8000
  tls:
    - hosts:
        - osc-stg.elpai.org
